2007-01-02  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/generate/WebServiceTask.java: removed check
	for webservice source files (cause they aren't really required and are absent if
	the services come from jar files), extended modification check (modtime within jar
	file is checked too)

2007-01-02  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/editor2/conf/edit.conf.xml: 
	* src/de/schlund/pfixcore/editor2/core/spring/PustefixSessionServiceImpl.java: 
	* src/de/schlund/pfixcore/editor2/frontend/util/SpringHelperEndContextInterceptor.java (removed): 
	Removed end interceptor because order in which end interceptors are called related
	to navigation processing changed thus causing the editor to fail. No the context
	is stored using a weak reference instead, so there is no need to manually remove
	it from the thread.

2006-12-28  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/webservice/xml/two_frames.xml: 
	* projects/core/img/console_webserviceadmin.gif: 
	* projects/core/img/console_webservicemonitor.gif: 
	* projects/core/xsl/utils.xsl: 
	Redesigned links for webservice console using icons now.

2006-12-21  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/ImageGeometry.java: 
	* projects/core/xsl/forminput.xsl: 
	* projects/core/xsl/include.xsl: 
	Use CSS style attribute instead of width/height attribute to be compatible
	with W3C's HTML specifications for <input type="image" .../> tag.
	
	* src/de/schlund/pfixxml/config/includes/IncludesResolver.java (resolveIncludes): 
	Fixed typo causing "refid" not to work.

2006-12-15  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/ServletManager.java (doGet): 
	Added explicit support for P3P header.
	
	* projects/core/xsl/include.xsl: 
	* projects/core/xsl/utils.xsl: 
	* projects/testsuite/conf/depend.xml: 
	* projects/core/img/console_*.gif: 