@@ -1,3 +1,7 @@
+2007-01-10  Martin Leidig  <mleidig@schlund.de>
+
+	* projects/core/script/webservice.js: fixed null value handling bug
+
 2007-01-02  Martin Leidig  <mleidig@schlund.de>
 
 	* src/de/schlund/pfixcore/webservice/generate/WebServiceTask.java: removed check
